# internal/pkg/app/docs/deleteRouteSwagger.go
@@ -1,6 +1,6 @@
 package docs
 
-// swagger:route DELETE /v1/routes/{routeId} routes deleteRouteId
+// swagger:route DELETE /v1/routes/{routeId} routes deleteRoute
 // Removes an existing route from the routing table if a route with the given ID exists.
 // responses:
 //   200: routeDeleteResponse
@@ -9,7 +9,7 @@ package docs
 // Item response containing the ID of the deleted route.
 // swagger:response routeDeleteResponse
 type routeDeleteResponseWrapper struct {
-	// in:body
+	// in: body
 	Body routeDeleteResponse
 }
 
