# internal/pkg/app/docs/getRouteSwagger.go
@@ -1,6 +1,6 @@
 package docs
 
-// swagger:route GET /v1/routes/{routeId} routes getRouteId
+// swagger:route GET /v1/routes/{routeId} routes getRoute
 // Gets a route for a given ID. If no route by that ID exists and error is returned instead.
 // responses:
 //   200: routeResponse
